widget/cocoa/nsDragService.h
@@ -15,16 +15,6 @@ extern NSString* const kCorePboardType_url;
 extern NSString* const kCorePboardType_urld;
 extern NSString* const kCorePboardType_urln;
 
-@interface NSPasteboardWrapper : NSObject
-{
-  NSPasteboard* mPasteboard;
-  NSArray* mFilenames;
-}
-- (id)initWithPasteboard:(NSPasteboard*)aPasteboard;
-- (id)propertyListForType:(NSString*)aType;
-- (NSPasteboard*)pasteboard;
-@end
-
 class nsDragService : public nsBaseDragService
 {
 public:
@@ -50,6 +40,11 @@ private:
   NSImage* ConstructDragImage(nsIDOMNode* aDOMNode,
                               nsIntRect* aDragRect,
                               nsIScriptableRegion* aRegion);
+  bool IsValidType(NSString* availableType, bool allowFileURL);
+  NSString* GetStringForType(NSPasteboardItem* item, const NSString* type,
+                             bool allowFileURL = false);
+  NSString* GetTitleForURL(NSPasteboardItem* item);
+  NSString* GetFilePath(NSPasteboardItem* item);
 
   nsCOMPtr<nsISupportsArray> mDataItems; // only valid for a drag started within gecko
   NSView* mNativeDragView;
